# ros2_custom_navigation

./: README.md
prakash_ws/install/: local_setup.sh  setup.sh
prakash_ws/install/bot_control/lib/bot_control/: reading_laser.py
prakash_ws/install/bot_control/share/bot_control/: local_setup.dsv  package.sh
prakash_ws/install/bot_description/share/bot_description/: package.sh
prakash_ws/install/bot_description/share/bot_description/launch/: control.launch.py  spawn.launch.py
prakash_ws/install/bot_world/share/bot_world/: package.sh
prakash_ws/log/: latest_build
prakash_ws/src/: README.md
prakash_ws/src/bot_control/: CMakeLists.txt  package.xml
prakash_ws/src/bot_control/bot_control/: move.py
prakash_ws/src/bot_control/rviz/: filter_laser.rviz
prakash_ws/src/bot_description/: CMakeLists.txt
prakash_ws/src/bot_description/config/: bot_controllers.yaml
prakash_ws/src/bot_description/launch/: robot_state_publisher.launch.py
prakash_ws/src/bot_description/rviz/: display.rviz
prakash_ws/src/bot_description/urdf/: bot.urdf.xacro
prakash_ws/src/bot_world/: CMakeLists.txt  package.xml
prakash_ws/src/bot_world/launch/: world.launch.py
turtlebot_ros2_ws/src/turtlebot_waffle_mapping/: CMakeLists.txt  package.xml
turtlebot_ros2_ws/src/turtlebot_waffle_mapping/doc/: setup_ws.md
turtlebot_ros2_ws/src/turtlebot_waffle_mapping/launch/: online_async_launch.launch.py
turtlebot_ros2_ws/src/turtlebot_waffle_mapping/maps/: map.pgm  map.yaml
turtlebot_ros2_ws/src/turtlebot_waffle_mapping/rviz/: maping.rviz
(+4 files in other folders)
